--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,18 @@
 			<version>42.7.5</version>
 		</dependency>
 		<!-- Flyway -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<version>11.3.0</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+			<version>11.3.0</version>
+			<scope>runtime</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -81,13 +88,21 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
 				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>-sourcepath</arg>
+						<arg>${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -100,6 +115,16 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>6.5.7</version>
+				<configuration>
+					<url>jdbc:h2:file:./test</url>
+					<user>sa</user>
+					<password></password>
 				</configuration>
 			</plugin>
 		</plugins>
